# data-labeling-filtering

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
config/: filter_vox1.yaml  label_vox1.yaml
data_labeling_filtering/: dnsmos_local_new.py  emotion_classification.py  filter_data.py  gender_age_classification.py  label_data.py  utils.py  wav_format.py  wav_transcription.py
docs/: README_filtering.md  README_improvements.md  README_labeling.md
output/filtering/vox1_test/dataframe/: output.csv
output/filtering/vox1_test/json/: output.json
output/labeling/vox1_test/dataframe/: dataframe.csv  output.csv
output/labeling/vox1_test/json/: output.json  output_100.json
scripts/: run_filter_data.py  run_label_data.py
