[tool.poetry]
name = "data-labeling-filtering"
version = "0.1.0"
description = "Project to label a speech dataset and filter using metadata"
authors = ["Marti Umbert <marti@aflorithmic.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
setuptools-rust = "^1.9.0"
pandas = "2.0.3"
audonnx = "^0.7.0"
numpy = "1.23.2"
soundfile = "0.12.1"
librosa = "0.8.1"
argparse = "1.1"
configparser = "5.3.0"
onnxruntime = "1.13.1"
torch = "1.10.1"
torchvision = "0.11.2"
torchaudio = "0.10.1"
tqdm = "^4.66.4"
huggingface-hub = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
